# cua-plugin

./: .gitignore  README.md  __init__.py  driver.py  protoagent.plugin.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
skills/driving-native-apps/: SKILL.md
tests/: conftest.py  test_driver.py  test_manifest.py  test_register.py
